--- a/trip/templates/trip/strategies.html
+++ b/trip/templates/trip/strategies.html
@@ -1,7 +1,7 @@
 {% extends 'trip/base.html' %}
 {% load static header data_filter panel %}
 
-{% block title %}Indicadores: Estrategias de viaje{% endblock %}
+{% block title %}Viajes: Estrategias de viaje{% endblock %}
 
 {% block css %}
     {{ block.super }}
@@ -23,7 +23,7 @@
 
 {% block content %}
     <div class="">
-        {% header "Estrategias de viaje" "Indicadores" %}
+        {% header "Estrategias de viaje" %}
         {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
         {% with panel_body="<div class='col-md-12 col-sm-12 col-xs-12'><label>Seleccione el origen y destino:</label><div id='mapChart' style='height:500px;'></div></div>" %}
             {% data_filter data_filter show_day_filter=True show_day_type_filter=True show_start_trip_period_filter=True show_start_trip_minute_filter=True extra_html=panel_body info_target_id="filterHelp" %}
