--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -76,7 +76,7 @@
                 <a><i class="fa fa-line-chart"></i> Viajes<span
                     class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <li><a href=" {% url "trip:graphs" %} ">Resumen</a></li>
+                    <li><a href=" {% url "trip:graphs" %} ">Indicadores de viajes</a></li>
                     <li><a href=" {% url "trip:map" %} ">Mapa</a></li>
                     <li><a href=" {% url "trip:large-trips" %} ">Viajes por Etapas</a></li>
                     <li><a href=" {% url "trip:from-to" %} ">Orígenes y Destinos</a></li>
