--- a/trip/templates/trip/from_to.html
+++ b/trip/templates/trip/from_to.html
@@ -1,7 +1,7 @@
 {% extends 'trip/base.html' %}
 {% load static header panel data_filter columns %}
 
-{% block title %}Indicadores: Orígenes y destinos{% endblock %}
+{% block title %}Viajes: Orígenes y destinos{% endblock %}
 
 {% block css %}
     {{ block.super }}
@@ -17,7 +17,7 @@
 
 {% block content %}
     <div class="">
-        {% header "Orígenes y destinos" "Indicadores" %}
+        {% header "Orígenes y destinos" %}
         {% include "datamanager/availableDays.html"  with info_target_id="dayHelp" %}
         {% columns 12 12 12 "<label>Número de etapas:</label><br />"|add:stage_selectors as col1 %}
         {% columns 12 12 12 "<label>Modo de viaje:</label><br />"|add:mode_selectors as col2 %}
