--- a/trip/templates/trip/resume.html
+++ b/trip/templates/trip/resume.html
@@ -1,7 +1,7 @@
 {% extends 'trip/base.html' %}
 {% load static header data_filter panel %}
 
-{% block title %}Indicadores: Resumen{% endblock %}
+{% block title %}Viajes: Indicadores de viajes{% endblock %}
 
 {% block css %}
     {{ block.super }}
@@ -11,7 +11,7 @@
 
 {% block content %}
     <div class="">
-        {% header "Resumen de viajes" "indicadores" %}
+        {% header "Indicadores de viajes" %}
         {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
         {% data_filter data_filter True False True False False False False False False False False False True info_target_id="filterHelp" %}
 
