--- a/trip/templates/trip/strategies.html
+++ b/trip/templates/trip/strategies.html
@@ -32,7 +32,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 {% with panel_body="<table id='tupleDetail' class='table table-striped table-bordered dt-responsive table-condensed nowrap' width='100%'><thead><tr><th></th><th></th><th></th><th></th><th></th></tr></thead></table>" %}
-                    {% panel "fa-chain" "Estrategias utilizadas" panel_body info_target_id="mapHelp" %}
+                    {% panel "fa-chain" "<span id='mapTitle'>Estrategias utilizadas para </span> <span id='tripTotalNumberValue'>0</span> <span id='tripTotalNumberLabel'>viajes</span> en <span id='dataTotalNumberValue'>0</span> <span id='dataTotalNumberLabel'>datos</span>" panel_body info_target_id="mapHelp" %}
                 {% endwith %}
             </div>
         </div>
