fixed hidden part of text

--- a/trip/templates/trip/resume_indicators.html
+++ b/trip/templates/trip/resume_indicators.html
@@ -1,15 +1,14 @@
 <div class="row tile_count indicadores-section">
-    <div id="indicator-first-count" class="col-md-4 col-sm-12 col-xs-12 tile_stats_count text-center">
+    <div id="indicator-first-count" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 tile_stats_count text-center">
         <span class="count_top"><i class="fa fa-bus"></i> Cantidad de Viajes</span>
         <div class="count" id="indicator-viajes">-</div>
         <span class="count_bottom"><i class="green" id="indicator-documentos">-</i> Viajes sin expandir</span>
     </div>
 
-    <div class="col-md-8 col-sm-12 col-xs-12">
+    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         {# Just to simulate the left hand bar #}
         <div class="col-xs-0 tile_stats_count"></div>
 
-        {# obs: bootstrap 3 does not support col-xl-* classes, but bootstrap 4 does. #}
         <div class="indicator-stat col-xl-3 col-lg-3 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
             <span class="count_top"><i class="fa fa-clock-o"></i> Tiempo de Viaje</span>
             <div class="count" id="indicator-tviaje-avg">- min</div>
