--- a/shape/templates/shape/mapBase.html
+++ b/shape/templates/shape/mapBase.html
@@ -10,6 +10,9 @@
           href="{% static "components/BeautifyMarker/leaflet-beautify-marker-icon.css" %}">
     <link rel="stylesheet"
           href="{% static "components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css" %}">
+    {% with "components/gentelella/vendors/" as gentelella_static %}
+        <link href="{% static gentelella_static|add:"select2/dist/css/select2.min.css" %}" rel="stylesheet">
+    {% endwith %}
     <style>
         .info {
             padding: 6px 8px;
@@ -54,6 +57,14 @@
             margin-bottom: 0;
             margin-right: 0;
         }
+
+        .select2-selection--single {
+            min-height: 18px !important;
+        }
+
+        .select2-selection--single .select2-selection__rendered {
+            line-height: 18px !important;
+        }
     </style>
 {% endblock %}
 
@@ -65,6 +76,7 @@
 {% block js %}
     {% with "components/gentelella/vendors/" as gentelella_static %}
         <script src="{% static gentelella_static|add:"iCheck/icheck.min.js" %}"></script>
+        <script src="{% static gentelella_static|add:"select2/dist/js/select2.min.js" %}"></script>
     {% endwith %}
     <script src="{% static "components/leaflet/dist/leaflet.js" %}"></script>
     <script src="{% static "components/leaflet-polylinedecorator/dist/leaflet.polylineDecorator.js" %}"></script>
