--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -77,7 +77,7 @@
                     class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href=" {% url "trip:graphs" %} ">Indicadores de viajes</a></li>
-                    <li><a href=" {% url "trip:map" %} ">Mapa</a></li>
+                    <li><a href=" {% url "trip:map" %} ">Geolocalización de viajes</a></li>
                     <li><a href=" {% url "trip:large-trips" %} ">Viajes por Etapas</a></li>
                     <li><a href=" {% url "trip:from-to" %} ">Orígenes y Destinos</a></li>
                     <li><a href=" {% url "trip:strategies" %} ">Estrategias de Viaje</a></li>
