--- a/trip/templates/trip/large.html
+++ b/trip/templates/trip/large.html
@@ -33,8 +33,8 @@
         </div>
     </div>
 
-    {% include "help/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
-    {% include "help/modal.html" with modal_id="mapHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
+    {% include "help/modal/explanation/trip/large/filter.html" with modal_id="filterHelp" %}
+    {% include "help/modal/modal.html" with modal_id="mapHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
     {{ block.super }}
 {% endblock %}
 
