fixed path to html modal

--- a/datamanager/templates/datamanager/loadManager.html
+++ b/datamanager/templates/datamanager/loadManager.html
@@ -54,7 +54,7 @@
         </div>
     </div>
 
-    {% include "help/modal.html" with show_ok_button=True modal_id="modal" %}
+    {% include "help/modal/modal.html" with show_ok_button=True modal_id="modal" %}
 {% endblock %}
 
 {% block js %}
