--- a/speed/templates/speed/matrix.html
+++ b/speed/templates/speed/matrix.html
@@ -58,9 +58,9 @@
         </div>
     </div>
 
-    {% include "help/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
-    {% include "help/modal.html" with modal_id="chartHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
-    {% include "help/modal.html" with modal_id="mapHelp" modal_title="Posición en el mapa" modal_body="esto es una explicación de la tabla" %}
+    {% include "help/modal/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "help/modal/modal.html" with modal_id="chartHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
+    {% include "help/modal/modal.html" with modal_id="mapHelp" modal_title="Posición en el mapa" modal_body="esto es una explicación de la tabla" %}
     {{ block.super }}
 {% endblock %}
 
