reduced label length

--- a/trip/templates/trip/large_stage_selectors.html
+++ b/trip/templates/trip/large_stage_selectors.html
@@ -1,5 +1,5 @@
 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-    <label>Número de etapas que realizó el viaje:</label>
+    <label>Número de etapas:</label>
 </div>
 
 <div class="col-lg-2 col-md-3 col-sm-4 col-xs-12 form-group">
