hide export button because filter is too abroad

--- a/trip/templates/trip/resume.html
+++ b/trip/templates/trip/resume.html
@@ -13,7 +13,7 @@
     <div class="">
         {% header "Indicadores de viajes" %}
         {% include "datamanager/availableDays.html" with info_target_id="dayHelp" %}
-        {% data_filter data_filter True False True False False False False False False False False False True info_target_id="filterHelp" %}
+        {% data_filter data_filter True False True False False False False False False False False False True info_target_id="filterHelp" show_export_button=False %}
 
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
