added info of trip views

--- a/templates/help/modal/explanation/calendar.html
+++ b/templates/help/modal/explanation/calendar.html
@@ -3,5 +3,7 @@
 {% block title %}Días disponibles{% endblock title %}
 
 {% block body %}
-    <p>El calendario muestra los días que pueden ser consultados, estos aparecen pintados de color verde.</p>
+    <p>El calendario de este panel muestra los días con datos disponibles para consultar (pintados de color verde).</p>
+    <p>Los días de la semana son agrupados en filas, donde la fila superior corresponde al día lunes, la fila debajo al
+        día martes y así sucesivamente hasta el día domingo.</p>
 {% endblock body %}
