--- a/templates/help/modal/explanation/trip/map/map.html
+++ b/templates/help/modal/explanation/trip/map/map.html
@@ -15,6 +15,15 @@
         <li>Las Condes: zona 207, zona 216, zona 215</li>
     </ul>
 
+    <p>Las variables disponibles en la visualización son cinco y corresponden a las siguientes:</p>
+    <ul>
+        <li>Tiempo de viaje: minutos que tomó la realización del viaje</li>
+        <li>Distancia en ruta: distancia entre el origen y el destino considerando el recorrido hecho por los servicios utilizados</li>
+        <li>Distancia euclidiana: distancia entre el origen y el destino del viaje</li>
+        <li>Número de etapas: número de etapas realizadas en el viaje</li>
+        <li>Cantidad de datos: número de viajes sin expandir existentes.</li>
+    </ul>
+
     <p>La escala “Divergente” divide los subgrupos en distintos colores (entre azules y rojos). La escala “Secuencial”
         divide los subgrupos en intensidades de rojo/amarillo. La escala de colores que el usuario selecciona solo
         influye en el efecto visual del mapa.</p>
