--- a/templates/help/modal/filters/boarding_period.html
+++ b/templates/help/modal/filters/boarding_period.html
@@ -1,4 +1,4 @@
 <dl class="dl-horizontal">
-    <dt>Período de subida</dt>
+    <dt>Período de inicio de viajes</dt>
     <dd>El usuario puede seleccionar uno o más periodo(s) de operación transantiago para generar los indicadores. Por defecto, este filtro mantiene todos los períodos de operación seleccionados.</dd>
 </dl>
