--- a/trip/templates/trip/from_to.html
+++ b/trip/templates/trip/from_to.html
@@ -36,7 +36,7 @@
         </div>
     </div>
 
-    {% include "help/modal/modal.html" with modal_id="filterHelp" modal_title="Filtro" modal_body="esto es una explicación de los filtros posibles" %}
+    {% include "help/modal/explanation/trip/fromto/filter.html" with modal_id="filterHelp" %}
     {% include "help/modal/modal.html" with modal_id="mapHelp" modal_title="Matriz de velocidades" modal_body="esto es una explicación del gráfico" %}
     {{ block.super }}
 {% endblock %}
