added info for strategy view

--- a/templates/help/modal/filters/stage_selector.html
+++ b/templates/help/modal/filters/stage_selector.html
@@ -1,4 +1,6 @@
 <dl class="dl-horizontal">
     <dt>Número de etapas</dt>
-    <dd>El usuario puede seleccionar los viajes según la cantidad de etapas utilizadas. Por defecto están seleccionados aquellos viajes con 4 o más etapas. Si no hay etapas seleccionadas se considera que todas lo están.</dd>
+    <dd>El usuario puede seleccionar los viajes según la cantidad de etapas utilizadas. Por defecto están seleccionados
+        aquellos viajes con 4 o más etapas. Si no hay etapas seleccionadas se considera que todas lo están.
+    </dd>
 </dl>
