--- a/templates/help/modal/filters/stage_selector2.html
+++ b/templates/help/modal/filters/stage_selector2.html
@@ -1,4 +1,6 @@
 <dl class="dl-horizontal">
     <dt>Número de etapas</dt>
-    <dd>El usuario puede seleccionar los viajes según la cantidad de etapas utilizadas. Por defecto no hay etapas seleccionadas por lo que se consideran todas</dd>
+    <dd>El usuario puede seleccionar los viajes según la cantidad de etapas utilizadas. Por defecto no hay etapas
+        seleccionadas por lo que se consideran todas
+    </dd>
 </dl>
