delete duplicated word

--- a/templates/help/modal/explanation/profile/by_route/table.html
+++ b/templates/help/modal/explanation/profile/by_route/table.html
@@ -25,7 +25,7 @@
             </ul>
         </li>
     </ul>
-    <p>Es importante destacar que esta tabla solo está activa cuando el período consultado contiene contiene siete o
-        menos días con datos.</p>
+    <p>Es importante destacar que esta tabla solo está activa cuando el período consultado contiene siete o menos días
+        con datos.</p>
 
 {% endblock body %}
