added info for load profile for stop

--- a/templates/help/modal/explanation/profile/by_route/chart.html
+++ b/templates/help/modal/explanation/profile/by_route/chart.html
@@ -1,6 +1,6 @@
 {% extends 'help/modal/modal_base.html' %}
 
-{% block title %}Mapa{% endblock title %}
+{% block title %}Perfil de carga{% endblock title %}
 
 {% block body %}
     <p>Este panel muestra un gráfico con varios puntos de información. El título del gráfico es “Perfil de carga para n
