--- a/templates/help/modal/explanation/profile/odmatrix/chart2.html
+++ b/templates/help/modal/explanation/profile/odmatrix/chart2.html
@@ -1,6 +1,6 @@
 {% extends 'help/modal/modal_base.html' %}
 
-{% block title %}Tabla de transbordos{% endblock title %}
+{% block title %}Etapas de una parada{% endblock title %}
 
 {% block body %}
     <p></p>
