--- a/templates/help/modal/explanation/speed/matrix/chart.html
+++ b/templates/help/modal/explanation/speed/matrix/chart.html
@@ -1,6 +1,6 @@
 {% extends 'help/modal/modal_base.html' %}
 
-{% block title %}Tabla de transbordos{% endblock title %}
+{% block title %}Matriz de velocidades{% endblock title %}
 
 {% block body %}
     <p></p>
