--- a/templates/help/modal/explanation/speed/ranking/map.html
+++ b/templates/help/modal/explanation/speed/ranking/map.html
@@ -1,6 +1,6 @@
 {% extends 'help/modal/modal_base.html' %}
 
-{% block title %}Tabla de transbordos{% endblock title %}
+{% block title %}Posición en el mapa{% endblock title %}
 
 {% block body %}
     <p></p>
