updated app name

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -8,7 +8,7 @@
     <div class="col-md-3 left_col">
       <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
-          <a href="{% url "index" %}" class="site_title"><i class="fa fa-dashboard"></i> <span> AGUILA</span></a>
+          <a href="{% url "index" %}" class="site_title"><i class="fa fa-dashboard"></i> <span> ADATRAP</span></a>
         </div>
 
         <div class="clearfix"></div>
