--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -25,7 +25,7 @@
           <br />
 
           <div>
-            <h1><i class="fa fa-dashboard"></i> AGUILA web!</h1>
+            <h1><i class="fa fa-dashboard"></i> ADATRAP </h1>
             <p>©2017 todos los derechos reservados.</p>
           </div>
         </div>
