--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -120,7 +120,7 @@
               <ul class="dropdown-menu dropdown-usermenu pull-right">
                 {% if user.has_usable_password %}
                 <li><a href="{% url 'datamanager:jobHistoryByUser' %}"><i class="fa fa-cloud-download pull-right"></i> Solicitudes de descarga</a></li>
-                <li><a href="{% url 'admin:password_change' %}"><i class="fa fa-edit pull-right"></i> Cambiar contraseña</a></li>
+                <li><a href="{% url 'webuser:password_change' %}"><i class="fa fa-edit pull-right"></i> Cambiar contraseña</a></li>
                 {% endif %}
                 <li><a href="{% url 'logout' %}"><i class="fa fa-sign-out pull-right"></i> Cerrar sesión</a></li>
               </ul>
