updated password, now it is updated from js file

--- a/webuser/templates/webuser/password_change.html
+++ b/webuser/templates/webuser/password_change.html
@@ -12,7 +12,7 @@
     <div id="content-main col-md-12 col-sm-12 col-xs-12">
         <div class="x_panel">
             <div class="x_content">
-                <form method="post">
+                <form id="form">
                     {% csrf_token %}
                     <div>
                         {% if form.errors %}
@@ -31,21 +31,18 @@
 
                         <fieldset class="module aligned wide well">
                             <div class="form-row">
-                                {{ form.old_password.errors }}
                                 {{ form.old_password.label_tag }} {{ form.old_password }}
                             </div>
                         </fieldset>
 
                         <fieldset class="module aligned wide well">
                             <div class="form-row">
-                                {{ form.new_password1.errors }}
                                 {{ form.new_password1.label_tag }} {{ form.new_password1 }}
                                 {% if form.new_password1.help_text %}
                                     <div class="help">{{ form.new_password1.help_text|safe }}</div>
                                 {% endif %}
                             </div>
                             <div class="form-row">
-                                {{ form.new_password2.errors }}
                                 {{ form.new_password2.label_tag }} {{ form.new_password2 }}
                                 {% if form.new_password2.help_text %}
                                     <div class="help">{{ form.new_password2.help_text|safe }}</div>
@@ -54,7 +51,7 @@
                         </fieldset>
 
                         <div class="well text-right">
-                            <input type="submit" value="{% trans 'Change my password' %}"
+                            <input id="update" type="button" value="{% trans 'Change my password' %}"
                                    class="btn btn-success btn-lg"/>
                         </div>
                     </div>
@@ -62,4 +59,9 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block js %}
+    {{ block.super }}
+    <script src="{% static "webuser/js/passwordChange.js" %}"></script>
 {% endblock %}
