--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -50,13 +50,21 @@
                 </ul>
               </li>
               {% endif %}
+              {% if perms.localinfo.storage %}
               <li><a><i class="fa fa-cloud-download"></i> Almacenamiento <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href="{% url 'awsbackup:gps' %}"> GPS</a></li>
-                  <li><a href="{% url 'awsbackup:trips' %}"> Viajes</a></li>
+                  <li><a href="{% url 'awsbackup:trip' %}"> Viajes</a></li>
                   <li><a href="{% url 'awsbackup:opprogram' %}"> Prog. operación</a></li>
+                  <li><a href="{% url 'awsbackup:representativeweek' %}"> Semanas rep.</a></li>
+                  <li><a href="{% url 'awsbackup:196' %}"> 1.96</a></li>
+                  <li><a href="{% url 'awsbackup:profile' %}"> Perfiles de carga</a></li>
+                  <li><a href="{% url 'awsbackup:stage' %}"> Etapas</a></li>
+                  <li><a href="{% url 'awsbackup:speed' %}"> Velocidades</a></li>
+                  <li><a href="{% url 'awsbackup:transaction' %}"> Prog. operación</a></li>
                 </ul>
               </li>
+              {% endif %}
               <li><a><i class="fa fa-bus"></i> Perfil de carga <span class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                   <li><a href=" {% url "profile:expedition" %} "> Por servicio</a></li>
