fixed menu option name

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -61,7 +61,7 @@
                   <li><a href="{% url 'awsbackup:profile' %}"> Perfiles de carga</a></li>
                   <li><a href="{% url 'awsbackup:stage' %}"> Etapas</a></li>
                   <li><a href="{% url 'awsbackup:speed' %}"> Velocidades</a></li>
-                  <li><a href="{% url 'awsbackup:transaction' %}"> Prog. operación</a></li>
+                  <li><a href="{% url 'awsbackup:transaction' %}"> Transacciones</a></li>
                 </ul>
               </li>
               {% endif %}
