--- a/awsbackup/templates/awsbackup/base.html
+++ b/awsbackup/templates/awsbackup/base.html
@@ -15,6 +15,14 @@
         <link href="{% static gentelella_static|add:"datatables.net-scroller-bs/css/scroller.bootstrap.min.css" %}"
               rel="stylesheet">
     {% endwith %}
+    <style>
+        tbody .btn {
+            margin-bottom: 0px;
+            font-size: 12px;
+            padding-top: 0px;
+            padding-bottom: 0px;
+        }
+    </style>
 {% endblock %}
 
 {% block title %}Almacenamiento{% endblock %}
