added admin to see created s3 links

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -47,6 +47,7 @@
                   <li><a href="{% url 'admin:datamanager_uploaderjobexecution_changelist' %}"> Historial de carga archivos</a></li>
                   <li><a href="{% url 'admin:datamanager_exporterjobexecution_changelist' %}"> Historial de exp. archivos</a></li>
                   <li><a href="{% url 'rq_home' %}"> Cola de carga</a></li>
+                  <li><a href="{% url 'admin:awsbackup_downloadlink_changelist' %}"> Links a S3 generados</a></li>
                 </ul>
               </li>
               {% endif %}
